--- a/views/a/login.html
+++ b/views/a/login.html
@@ -13,7 +13,7 @@ tr:hover {background-color:#f5f5f5;}
 </style>
 
 <table>
-<tr><th>Login:</th><td> <INPUT TYPE="TEXT"     name="login" /></td></tr>
+<tr><th>Login:</th><td> <INPUT TYPE="TEXT"     name="email" /></td></tr>
 <tr><th>Password:</th><td> <INPUT TYPE="PASSWORD" name="passwd" /></td></tr>
 </table>
 <button TYPE="SUBMIT"> Sign In Now </button>
